--- a/docs/latex/tex/B_Requisitos.tex
+++ b/docs/latex/tex/B_Requisitos.tex
@@ -130,16 +130,14 @@ Como apreciación, los desarrolladores tendrán acceso al \emph{backend}, donde 
 \end{figure}
 
 \subsection{Casos de uso}
+
+%%CASO DE USO PARA EL INICIO DE LA SESIÓN
 \tablaSmallSinColores{Caso de uso 1: Sign in}{p{3cm} p{.75cm} p{9.5cm}}{tablaUC0}{
-	\multicolumn{3}{l}{Caso de uso 1} \\
+	\multicolumn{3}{l}{Caso de uso 1: Sign in} \\
 }
 {
 	Descripción                            & \multicolumn{2}{p{10.25cm}}{Permite al usuario acceder a la aplicación mediante su cuenta de Google. Como consultar la política de privacidad.} \\\hline
-	\multirow{2}{3.5cm}{Requisitos}   &\multicolumn{2}{p{10.25cm}}{RF-1} \\\cline{2-3}
-	& \multicolumn{2}{p{10.25cm}}{RF-1.1} \\\cline{2-3}
-	& \multicolumn{2}{p{10.25cm}}{RF-1.2}
-	\\\hline
-	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Tener la aplicación descargada en el terminal}   \\\hline
+	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-1,RF-1.1,RF-1.2} \\\cline{1-3}Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Tener la aplicación descargada en el terminal}   \\\hline
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
 	& 1    & EL usuario clicka en 'Privacy policy'.
 	\\\cline{2-3}
@@ -152,6 +150,68 @@ Como apreciación, los desarrolladores tendrán acceso al \emph{backend}, donde 
 	Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.} \\\hline
 	Excepciones                        & \multicolumn{2}{p{10.25cm}}{No disponer de cuenta de Google}\\\hline
 	Importancia                            & Alta \\\hline
-	Urgencia                               & Alta \\
+	Urgencia                               & Alta \\\hline
 	Frecuencia                               & Alta \\
+}
+
+%% CASO DE USO PARA MOSTRAR EL CONTENIDO DEL MENÚ
+\tablaSmallSinColores{Caso de uso 2: Mostrar el menú}{p{3cm} p{.75cm} p{9.5cm}}{tablaUC0}{
+	\multicolumn{3}{l}{Caso de uso 2: Mostrar el menú} \\
+}
+{
+	Descripción                            & \multicolumn{2}{p{10.25cm}}{Da la capacidad al usuario de navegar entre las ventanas de la aplicación, como salir de la misma en el caso de que así lo requiera.} \\\hline
+	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-2,RF-2.1,RF-2.2,RF-2.3,RF-1.3} \\\cline{1-3}
+	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requsito funcional primero.}   \\\hline
+	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
+	& 1    & Deslizamiento horizontal derecho o pulsación en la hamburguesa, para mostrar el menú lateral.
+	\\\cline{2-3}
+	& 2    & Elegimos una de las diferentes opciones del menú.
+	\\\cline{2-3}
+	& 3    & Navegamos a la ventana escogida o salimos de la aplicación.
+	\\\hline
+	Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.} \\\hline
+	Excepciones                        & \multicolumn{2}{p{10.25cm}}{El menú no se encuentra disponible dentro de los juegos}\\\hline
+	Importancia                            & Alta \\\hline
+	Urgencia                               & Alta \\\hline
+	Frecuencia                               & Alta \\
+}
+
+%%CASO DE USO PARA LA CONFIGURACIÓN DE LA APLICACIÓN
+\tablaSmallSinColores{Caso de uso 3: Configuración de la aplicación}{p{3cm} p{.75cm} p{9.5cm}}{tablaUC0}{
+\multicolumn{3}{l}{Caso de uso 3: Configuración de la aplicación} \\
+}
+{
+Descripción                            & \multicolumn{2}{p{10.25cm}}{Dotar al usuario de las herramientas necesarias para poder hacer cambios de alguna de las partes del sistema.} \\\hline
+Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-3,RF-3.1,RF-3.2} \\\cline{1-3}
+Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requisito funcional uno.}   \\\hline
+\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
+& 1    & Escoger del menú lateral la parte de 'settings'.
+\\\cline{2-3}
+& 2    & Una vez dentro, usar los 'sliders' activar o desactivar las funciones indicadas.
+\\\hline
+Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Ver que los cambios se producen.} \\\hline
+Excepciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.}\\\hline
+Importancia                            & Media \\\hline
+Urgencia                               & Media \\\hline
+Frecuencia                               & Alta \\
+}
+
+%%CASO DE USO PARA MOSTRAR EL CONTENIDO SOBRE EL CREADOR DE LA APLICACIIÓN
+\tablaSmallSinColores{Caso de uso 4: Mostrar el contenido de About}{p{3cm} p{.75cm} p{9.5cm}}{tablaUC0}{
+	\multicolumn{3}{l}{Caso de uso 4: Mostrar el contenido de about} \\
+}
+{
+	Descripción                            & \multicolumn{2}{p{10.25cm}}{Disponer de la opción de ver quien es el creador de la aplicación y navegar a recursos.} \\\hline
+	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-3,RF-3.1,RF-3.2} \\\cline{1-3}
+	Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Haber realizado el requisito funcional uno.}   \\\hline
+	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
+	& 1    & Escoger del menú lateral la parte de 'About me'.
+	\\\cline{2-3}
+	& 2    & Pulsar en los 'iconbuttons' para mostrar el contenido seleccionado en el navegador. En el caso el botón sea de correo, nos tiene que abrir la aplicación correspondiente para mandar un feedback.
+	\\\hline
+	Postcondiciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.} \\\hline
+	Excepciones                        & \multicolumn{2}{p{10.25cm}}{Ninguna.}\\\hline
+	Importancia                            & Baja \\\hline
+	Urgencia                               & Baja \\\hline
+	Frecuencia                             & Baja \\
 }
