--- a/docs/latex/tex/C_Diseno.tex
+++ b/docs/latex/tex/C_Diseno.tex
@@ -1,6 +1,7 @@
 \apendice{Especificación de diseño}
 
 \section{Introducción}\label{diseño}
+En este apéndice se recoge el diseño de las interfaces, como se resolvieron los requisitos funcionales anteriormente expuestos~\pageref{requisitos}, el manejo de los datos o la estructura de los mismos.
 
 \section{Diseño de datos}
 
