--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -59,6 +59,31 @@
 	note = "[]"
 }
 
+
+@misc{ wiki:nosql,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/NoSQL#Bases_de_datos_tabular},
+	note = "[]"
+}
+
+@misc{ package:sqlflite,
+	author = "pub dev",
+	title = "MIT",
+	year = "2020",
+	url = {https://pub.dev/packages/sqflite},
+	note = "[]"
+}
+
+@misc{ wiki:mongodb,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/MongoDB},
+	note = "[]"
+}
+
 @misc{ wiki:sha1,
 	author = "Wikipedia",
 	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
