--- a/docs/latex/tex/B_Requisitos.tex
+++ b/docs/latex/tex/B_Requisitos.tex
@@ -1,6 +1,6 @@
 \apendice{Especificación de Requisitos}
 
-\section{Introducción}
+\section{Introducción}\label{requisitos}
 En este apéndice se detallan los requisitos del proyecto, como los funcionales y no funcionales. La finalidad es hacer de intermediario entre el cliente y los programadores, con el objetivo de ayudar a entender, comprender y analizar la aplicación. 
 
 \section{Objetivos generales}
