--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -141,4 +141,12 @@
 	note = "[]"
 }
 
+@misc{ xurxodev:bloc,
+	author = "Jorge Sánchez Fernández",
+	title = "INTRODUCCIÓN AL PATRÓN BLOC",
+	year = "2020",
+	url = {http://xurxodev.com/introduccion-al-patron-bloc/},
+	note = "[]"
+}
+
 
